--- a/css/fonts.css
+++ b/css/fonts.css
@@ -5,7 +5,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(fonts/opensans/OpenSans-Regular.ttf) format('truetype');
+  src: url(../fonts/opensans/OpenSans-Regular.ttf) format('truetype');
 }
 
 /* latin */
@@ -14,7 +14,7 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url(fonts/opensans/OpenSans-SemiBold.ttf) format('truetype');
+  src: url(../fonts/opensans/OpenSans-SemiBold.ttf) format('truetype');
 }
 
 /
@@ -24,5 +24,5 @@
   font-style: normal;
   font-weight: 800;
   font-display: swap;
-  src: url(fonts/opensans/OpenSans-ExtraBold.ttf) format('truetype');
+  src: url(../fonts/opensans/OpenSans-ExtraBold.ttf) format('truetype');
 }
