--- a/css/brands.css
+++ b/css/brands.css
@@ -642,7 +642,7 @@ button:hover,
 /* Vero*/
 .button.button-vero {
   color: #ffffff;
-  background-color: #00cccc;
+  background-color: #0684b9;
 }
 .button.button-vero:hover,
 .button.button-vero:focus {
